feat: add it tests for usercontroller