@@ -1,8 +1,12 @@
 package com.jmfs.financial_control_api.service;
 
+import com.jmfs.financial_control_api.exceptions.AccessDeniedException;
+import com.jmfs.financial_control_api.service.spec.TokenService;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -20,6 +24,7 @@ import com.jmfs.financial_control_api.service.impl.UserServiceImpl;
 
 import java.util.List;
 import java.util.Arrays;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -28,6 +33,9 @@ import static org.mockito.Mockito.*;
 public class UserServiceTest {
     @Mock
     private UserRepository userRepository;
+
+    @Mock
+    private TokenService tokenService;
 
     @InjectMocks
     private UserServiceImpl userService;
@@ -39,53 +47,134 @@ public class UserServiceTest {
 
     @BeforeEach
     void setUp() {
-        user1 = new User();
-        user1.setId(1L);
-        user1.setName("João Silva");
-        user1.setEmail("joao@example.com");
-        user1.setPassword("password123");
-        user1.setRole(RoleEnum.USER);
-        user1.setStatus(StatusEnum.ACTIVE);
+        user1 = User.builder()
+                .id(1L)
+                .name("João Silva")
+                .email("joao@example.com")
+                .password("password123")
+                .role(RoleEnum.USER)
+                .status(StatusEnum.ACTIVE)
+                .build();
 
-        user2 = new User();
-        user2.setId(2L);
-        user2.setName("Maria Santos");
-        user2.setEmail("maria@example.com");
-        user2.setPassword("password456");
-        user2.setRole(RoleEnum.ADMIN);
-        user2.setStatus(StatusEnum.ACTIVE);
+        user2 = User.builder()
+                .id(2L)
+                .name("Maria Santos")
+                .email("maria@example.com")
+                .password("password456")
+                .role(RoleEnum.ADMIN)
+                .status(StatusEnum.ACTIVE)
+                .build();
 
-        user3 = new User();
-        user3.setId(3L);
-        user3.setName("Pedro Costa");
-        user3.setEmail("pedro@example.com");
-        user3.setPassword("password789");
-        user3.setRole(RoleEnum.USER);
-        user3.setStatus(StatusEnum.INACTIVE);
+        user3 = User.builder()
+                .id(3L)
+                .name("Pedro Costa")
+                .email("pedro@example.com")
+                .password("password789")
+                .role(RoleEnum.USER)
+                .status(StatusEnum.INACTIVE)
+                .build();
 
         pageable = PageRequest.of(0, 10);
     }
 
     @Test
+    @DisplayName("Should update all user info succesfully when requester is ADMIN")
+    void testPatchUser_case1(){
+        String token = "token";
+        UserDTO userDTO = new UserDTO(user1.getEmail(), "João Souza", RoleEnum.ADMIN.getValue(), StatusEnum.INACTIVE.getValue());
+
+        when(userRepository.findByEmail(user1.getEmail())).thenReturn(Optional.of(user1));
+        when(tokenService.extractUserId(token)).thenReturn(user2.getId());
+        when(userRepository.isAdmin(user2.getId(), RoleEnum.ADMIN)).thenReturn(true);
+
+        userService.patchUser("token", userDTO);
+
+        ArgumentCaptor<User> captor = ArgumentCaptor.forClass(User.class);
+
+        verify(userRepository).save(captor.capture());
+
+        User updatedUser =  captor.getValue();
+
+        assertEquals(userDTO.name(), updatedUser.getName());
+        assertEquals(RoleEnum.ADMIN, updatedUser.getRole());
+        assertEquals(StatusEnum.INACTIVE, updatedUser.getStatus());
+        assertEquals(user1.getEmail(), updatedUser.getEmail());
+    }
+
+    @Test
+    @DisplayName("Should update user if he is the requester and isn't admin")
+    void testPatchUser_case2(){
+        String token = "token";
+        UserDTO userDTO = new UserDTO(user1.getEmail(), "João Souza", null, null);
+
+        when(userRepository.findByEmail(user1.getEmail())).thenReturn(Optional.of(user1));
+        when(tokenService.extractUserId(token)).thenReturn(user1.getId());
+        when(userRepository.isAdmin(user1.getId(), RoleEnum.ADMIN)).thenReturn(false);
+
+        userService.patchUser("token", userDTO);
+
+        ArgumentCaptor<User> captor = ArgumentCaptor.forClass(User.class);
+
+        verify(userRepository).save(captor.capture());
+
+        User updatedUser =  captor.getValue();
+
+        assertEquals(userDTO.name(), updatedUser.getName());
+        assertEquals(user1.getRole(), updatedUser.getRole());
+        assertEquals(user1.getStatus(), updatedUser.getStatus());
+        assertEquals(user1.getEmail(), updatedUser.getEmail());
+    }
+
+    @Test
+    @DisplayName("Shouldn't update user if he isn't the requester and isn't ADMIN")
+    void testPatchUser_case3(){
+        String token = "token";
+        UserDTO userDTO = new UserDTO(user1.getEmail(), "João Souza", null, null);
+
+        when(userRepository.findByEmail(user1.getEmail())).thenReturn(Optional.of(user1));
+        when(tokenService.extractUserId(token)).thenReturn(user3.getId());
+        when(userRepository.isAdmin(user3.getId(), RoleEnum.ADMIN)).thenReturn(false);
+
+
+        assertThrows(
+                AccessDeniedException.class,
+                () -> userService.patchUser("token", userDTO)
+        );
+    }
+
+    @Test
+    @DisplayName("Shouldn't update user when he isn't ADMIN, is the requester, but try to update the role or status")
+    void testPatchUser_case4(){
+        String token = "token";
+        UserDTO userDTO = new UserDTO(user1.getEmail(), "João Souza", RoleEnum.ADMIN.getValue(), null);
+
+        when(userRepository.findByEmail(user1.getEmail())).thenReturn(Optional.of(user1));
+        when(tokenService.extractUserId(token)).thenReturn(user1.getId());
+        when(userRepository.isAdmin(user1.getId(), RoleEnum.ADMIN)).thenReturn(false);
+
+
+        assertThrows(
+                AccessDeniedException.class,
+                () -> userService.patchUser("token", userDTO)
+        );
+    }
+
+    @Test
     void testGetUser_WithPageable_ReturnsPage() {
-        // Given
         List<User> users = Arrays.asList(user1, user2, user3);
         Page<User> userPage = new PageImpl<>(users, pageable, users.size());
         
         when(userRepository.findAll(pageable)).thenReturn(userPage);
 
-        // When
         Page<UserDTO> result = userService.getUser(pageable);
 
-        // Then
         assertNotNull(result);
         assertEquals(3, result.getContent().size());
         assertEquals(3, result.getTotalElements());
         assertEquals(0, result.getNumber());
         assertEquals(10, result.getSize());
         
-        // Verify DTO mapping
-        UserDTO dto1 = result.getContent().get(0);
+        UserDTO dto1 = result.getContent().getFirst();
         assertEquals("joao@example.com", dto1.email());
         assertEquals("João Silva", dto1.name());
         assertEquals("ROLE_USER", dto1.role());
@@ -106,7 +195,7 @@ public class UserServiceTest {
     @Test
     void testGetUser_WithPageable_EmptyResult() {
         // Given
-        List<User> emptyList = Arrays.asList();
+        List<User> emptyList = List.of();
         Page<User> emptyPage = new PageImpl<>(emptyList, pageable, 0);
         
         when(userRepository.findAll(pageable)).thenReturn(emptyPage);
@@ -147,50 +236,25 @@ public class UserServiceTest {
     }
 
     @Test
-    void testGetUser_VerifyDTOMappingWithAllFields() {
-        // Given
-        List<User> users = Arrays.asList(user1);
-        Page<User> userPage = new PageImpl<>(users, pageable, 1);
-        
-        when(userRepository.findAll(pageable)).thenReturn(userPage);
-
-        // When
-        Page<UserDTO> result = userService.getUser(pageable);
-
-        // Then
-        assertNotNull(result);
-        assertEquals(1, result.getContent().size());
-        
-        UserDTO dto = result.getContent().get(0);
-        assertEquals(user1.getEmail(), dto.email());
-        assertEquals(user1.getName(), dto.name());
-        assertEquals(user1.getRole().getValue(), dto.role());
-        // Note: password should not be in DTO for security reasons
-        
-        verify(userRepository).findAll(pageable);
-    }
-
-    @Test
     void testGetUser_WithMultiplePages() {
-        // Given - Simulando primeira página com 2 itens
         Pageable firstPage = PageRequest.of(0, 2);
         List<User> firstPageUsers = Arrays.asList(user1, user2);
         Page<User> firstUserPage = new PageImpl<>(firstPageUsers, firstPage, 3); // Total de 3 elementos
         
         when(userRepository.findAll(firstPage)).thenReturn(firstUserPage);
 
-        // When
         Page<UserDTO> result = userService.getUser(firstPage);
 
-        // Then
         assertNotNull(result);
         assertEquals(2, result.getContent().size());
         assertEquals(3, result.getTotalElements());
         assertEquals(0, result.getNumber());
         assertEquals(2, result.getSize());
-        assertTrue(result.hasNext()); // Tem próxima página
-        assertFalse(result.hasPrevious()); // Não tem página anterior
+        assertTrue(result.hasNext());
+        assertFalse(result.hasPrevious());
         
         verify(userRepository).findAll(firstPage);
     }
+
+
 }
